Pull request #52: changed dashboard and fixed routes/ changed appoints from cards to table
Merge in INT/craiova-internship from doctor-route to firebase-test

Squashed commit of the following:

commit bd427deb371bf7d635b06deac8c3175894189c2c
Merge: ad0663a f11f473
Author: Daniel Grigorie <daniel.grigorie@nagarro.com>
Date:   Thu Aug 10 14:47:05 2023 +0300

    Merge branch 'firebase-test' of ssh://git-niq.nagarro.com/int/craiova-internship into doctor-route

commit ad0663ad6039938ee976cdbf99205b002c238382
Author: Daniel Grigorie <daniel.grigorie@nagarro.com>
Date:   Thu Aug 10 14:45:40 2023 +0300

    changed dashboard and fixed routes/ changed appoints from cards to table

--- a/src/app/core/modules/doctor/components/doctor.component.scss
+++ b/src/app/core/modules/doctor/components/doctor.component.scss
@@ -1,51 +1,5 @@
 .dashboard {
   width: 100%;
   height: 100%;
-  background: #add3e6;
-
-  &__header {
-    width: 100%;
-    position: relative;
-    box-shadow: 5px 5px 5px;
-
-    &__container {
-      display: flex;
-      justify-content: space-around;
-      align-items: center;
-      min-height: 64px;
-      background: #4fa4d8;
-
-      .account-settings {
-        display: flex;
-        flex-direction: column;
-      }
-
-      .date {
-        margin-left: 15px;
-        line-height: 25px;
-      }
-
-      .profile {
-        background: #0274bd;
-        border-radius: 10px;
-      }
-
-      .profile-name {
-        margin: 7px 7px 7px 7px;
-        color: #fff;
-      }
-    }
-  }
-
-  &__body {
-    margin-top: 10px;
-    background: none;
-  }
-}
-
-mat-expansion-panel {
-  background: none;
-}
-mat-expansion-panel-header {
-  background: none;
+  margin: 0;
 }
